# game_of_life

./: Cargo.toml  readme.md
src/: main.rs
