[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"
authors = ["Melikadze <melikadze@live.com>"]
repository = "https://github.com/melikadze/game_of_life"
license = "MIT OR Apache-2.0"
description = "A basic terminal implementation of Conway's Game of Life!"


[dependencies]
crossterm = "0.28.1"
